TFP-5405 Håndterer at det er mulig at det ikke finnes uttak ved avsla… (#5380)
TFP-5405 Håndterer at det er mulig at det ikke finnes uttak ved avslag revurdering.